compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__strings__case.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go(a) {\n  case a {\n    \"\" -> 0\n    \"one\" -> 1\n    \"two\" -> 2\n    _ -> 3\n  }\n}\n"
---
let
  go =
    a:
      if a == ""
      then 0
      else if a == "one"
      then 1
      else if a == "two"
      then 2
      else 3;
in {}
