compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__strings__equality.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go(a) {\n  a == \"ok\"\n  a != \"ok\"\n  a == a\n}\n"
---
let go = a: let _'0 = a == "ok"; _'1 = a != "ok"; in a == a; in {}
