compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__strings__string_concat.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go() {\n  \"Hello, \" <> \"Joe\"\n}\n"
---
let go = "Hello, " + "Joe"; in {}
