compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__strings__string_patterns.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\nfn go(x) {\n  let assert \"Hello\" = x\n}\n"
---
let
  go =
    x:
      if x != "Hello"
      then builtins.throw "Assignment pattern did not match"
      else x;
in {}
