compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__strings__string_prefix_utf8.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\npub fn go(x) {\n  case \"Θ foo bar\" {\n    \"Θ\" <> rest -> rest\n    _ -> \"\"\n  }\n  case \"🫥 is neutral dotted\" {\n    \"🫥\" <> rest -> rest\n    _ -> \"\"\n  }\n  case \"🇺🇸 is a cluster\" {\n    \"🇺🇸\" <> rest -> rest\n    _ -> \"\"\n  }\n  case \"\\\" is a an escaped quote\" {\n    \"\\\"\" <> rest -> rest\n    _ -> \"\"\n  }\n  case \"\\\\ is a an escaped backslash\" {\n    \"\\\\\" <> rest -> rest\n    _ -> \"\"\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) strHasPrefix;
  
  go =
    x:
      let
        _'0 =
          let
            _pat' = "Θ foo bar";
          in
            if strHasPrefix "Θ" _pat'
            then let rest = (builtins.substring 2 (-1) _pat'); in rest
            else "";
        _'1 =
          let
            _pat''1 = "🫥 is neutral dotted";
          in
            if strHasPrefix "🫥" _pat''1
            then let rest = (builtins.substring 4 (-1) _pat''1); in rest
            else "";
        _'2 =
          let
            _pat''2 = "🇺🇸 is a cluster";
          in
            if strHasPrefix "🇺🇸" _pat''2
            then let rest = (builtins.substring 8 (-1) _pat''2); in rest
            else "";
        _'3 =
          let
            _pat''3 = "\" is a an escaped quote";
          in
            if strHasPrefix "\"" _pat''3
            then let rest = (builtins.substring 1 (-1) _pat''3); in rest
            else "";
      in
        let
          _pat''4 = "\\ is a an escaped backslash";
        in
          if strHasPrefix "\\" _pat''4
          then let rest = (builtins.substring 1 (-1) _pat''4); in rest
          else "";
in { inherit go; }
