compiler-core/src/nix/tests/snapshots/gleam_core__nix__tests__strings__string_with_form_feed.snap
---
source: compiler-core/src/nix/tests/strings.rs
expression: "\npub fn go() {\n  let form_feed = \"\\f a\\fb \\f\"\n  case form_feed {\n    \"\\f \" as ff <> rest -> rest\n    _ -> \"\\f\"\n  }\n}\n"
---
let
  inherit (builtins.import ./../gleam.nix) strHasPrefix parseEscape;
  
  go =
    let
      form_feed =
        "${parseEscape "\\f"} a${parseEscape "\\f"}b ${parseEscape "\\f"}";
    in
      if strHasPrefix "${parseEscape "\\f"} " form_feed
      then
        let
          rest = (builtins.substring 2 (-1) form_feed);
          ff = "${parseEscape "\\f"} ";
        in rest
      else "${parseEscape "\\f"}";
in { inherit go; }
